--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -13,6 +13,6 @@ jobs:
               with:
                 node-version: '15.x'
             - run: npm install
-            - run: npm run prettier
+            - run: npm i -g prettier
             - run: CI=true npm run test
             - run: npm run build
