add login secrets

--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -10,6 +10,11 @@ jobs:
     terraform:
         name: 'Terraform'
         env:
+            ARM_CLIENT_ID: ${{ secrets.AZURE_AD_CLIENT_ID }}
+            ARM_CLIENT_SECRET: ${{ secrets.AZURE_AD_CLIENT_SECRET }}
+            ARM_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION }}
+            ARM_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
+            ARM_ACCES_KEY: ${{ secrets.ACCESS_KEYS}}
             ROOTH_PATH: '${{ github.workspace }}/Infra'
 
         runs-on: ubuntu-latest
