add login secrets

--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -13,7 +13,7 @@ jobs:
             ARM_CLIENT_ID: ${{ secrets.AZURE_AD_CLIENT_ID }}
             ARM_CLIENT_SECRET: ${{ secrets.AZURE_AD_CLIENT_SECRET }}
             ARM_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION }}
-            ARM_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
+            ARM_TENANT_ID: ${{ secrets.AZURE_AD_TENANT_ID }}
             ARM_ACCES_KEY: ${{ secrets.ACCESS_KEYS}}
             ROOTH_PATH: '${{ github.workspace }}/Infra'
 
